--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "@react-ci/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "*** config ***": "",
+    "nx:update": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx migrate latest --no-cloud",
+    "nx:run-migrations": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx migrate --run-migrations --no-cloud",
+    "ncu:update": "ncu -u -t minor",
+    "ncu:update:interactive": "ncu -i --format group",
+    "npm:audit": "npm audit",
+    "npm:audit:fix": "npm audit fix --force"
+  },
   "private": true,
   "dependencies": {
-    "next": "~15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "15.2.5",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^2.1.1",
-    "@eslint/js": "^9.8.0",
-    "@next/eslint-plugin-next": "^15.2.4",
+    "@eslint/compat": "1.4.1",
+    "@eslint/eslintrc": "2.1.1",
+    "@eslint/js": "9.38.0",
+    "@next/eslint-plugin-next": "15.2.4",
     "@nx/devkit": "22.0.2",
     "@nx/eslint": "22.0.2",
     "@nx/eslint-plugin": "22.0.2",
@@ -22,39 +30,40 @@
     "@nx/next": "22.0.2",
     "@nx/playwright": "22.0.2",
     "@nx/workspace": "22.0.2",
-    "@playwright/test": "^1.36.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.6.0",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@testing-library/dom": "10.4.0",
+    "@playwright/test": "1.56.1",
+    "@swc-node/register": "1.11.1",
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.14.0",
+    "@swc/helpers": "0.5.17",
+    "@testing-library/dom": "10.4.1",
     "@testing-library/react": "16.3.0",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "30.0.0",
     "@types/node": "20.19.9",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "autoprefixer": "10.4.13",
-    "babel-jest": "^30.0.2",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "^15.2.4",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "7.35.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "autoprefixer": "10.4.21",
+    "babel-jest": "30.2.0",
+    "eslint": "9.38.0",
+    "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-playwright": "1.6.2",
+    "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.0.0",
-    "jest": "^30.0.2",
-    "jest-environment-jsdom": "^30.0.2",
-    "jest-util": "^30.0.2",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
+    "jest-util": "30.2.0",
+    "npm-check-updates": "19.1.2",
     "nx": "22.0.2",
-    "postcss": "8.4.38",
-    "prettier": "^2.6.2",
+    "postcss": "8.5.6",
+    "prettier": "2.6.2",
     "tailwindcss": "3.4.3",
-    "ts-jest": "^29.4.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "ts-jest": "29.4.5",
+    "ts-node": "10.9.2",
+    "tslib": "2.8.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.2"
   },
   "workspaces": [
     "apps/*"
