--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "nx": "node ./node_modules/nx/bin/nx",
+    "ng": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx",
+    "*** react-ci ***": "",
+    "run": "node ./node_modules/nx/bin/nx run react-ci:serve:development --host 0.0.0.0 --poll 500 --no-cloud",
+    "react-ci:serve:production": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:serve:production --host 0.0.0.0 --poll 500 --no-cloud",
+    "react-ci:build:development": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:build:development --no-cloud",
+    "build": "nx run react-ci:build:production --no-cloud",
+    "react-ci:lint:fix": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:lint --fix=true --no-cloud",
+    "react-ci-e2e:lint:fix": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci-e2e:lint --fix=true --no-cloud",
+    "react-ci:test": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:test",
+    "react-ci:test-e2e:development": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci-e2e:e2e:development --no-cloud",
+    "test": "nx run react-ci-e2e:e2e:production --no-cloud",
     "*** config ***": "",
     "nx:update": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx migrate latest --no-cloud",
     "nx:run-migrations": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx migrate --run-migrations --no-cloud",
