--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx",
     "*** react-ci ***": "",
     "run": "node ./node_modules/nx/bin/nx run react-ci:start:development --no-cloud",
-    "react-ci:serve:production": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:start:production --no-cloud",
+    "react-ci:start:production": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:start:production --no-cloud",
     "react-ci:build:development": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:build:development --no-cloud",
     "build": "nx run react-ci:build:production --no-cloud",
     "react-ci:lint:fix": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run react-ci:lint --fix=true --no-cloud",
@@ -21,7 +21,12 @@
     "ncu:update": "ncu -u -t minor",
     "ncu:update:interactive": "ncu -i --format group",
     "npm:audit": "npm audit",
-    "npm:audit:fix": "npm audit fix --force"
+    "npm:audit:fix": "npm audit fix --force",
+    "lint": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run-many --all --target=lint --no-cloud",
+    "lint:fix": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run-many --all --target=lint --fix=true --no-cloud",
+    "stylelint": "node --max-old-space-size=8192 ./node_modules/stylelint/bin/stylelint.mjs apps/**/*.scss --config .stylelintrc",
+    "stylelint:fix": "node --max-old-space-size=8192 ./node_modules/stylelint/bin/stylelint.mjs apps/**/*.scss --fix=true --config .stylelintrc",
+    "test:all": "node --max-old-space-size=8192 ./node_modules/nx/bin/nx run-many --all --target=lint --no-cloud"
   },
   "private": true,
   "dependencies": {
@@ -31,7 +36,7 @@
   },
   "devDependencies": {
     "@eslint/compat": "1.4.1",
-    "@eslint/eslintrc": "2.1.1",
+    "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.38.0",
     "@next/eslint-plugin-next": "16.0.1",
     "@nx/devkit": "22.0.2",
@@ -60,17 +65,17 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-playwright": "1.6.2",
+    "eslint-plugin-playwright": "2.2.2",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-hooks": "7.0.1",
     "jest": "30.2.0",
     "jest-environment-jsdom": "30.2.0",
     "jest-util": "30.2.0",
     "npm-check-updates": "19.1.2",
     "nx": "22.0.2",
     "postcss": "8.5.6",
-    "prettier": "2.6.2",
-    "tailwindcss": "3.4.3",
+    "prettier": "3.6.2",
+    "tailwindcss": "4.1.16",
     "ts-jest": "29.4.5",
     "ts-node": "10.9.2",
     "tslib": "2.8.1",
