--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     "typescript": "5.9.3",
     "typescript-eslint": "8.46.2"
   },
+  "overrides": {
+    "koa": "3.1.1"
+  },
   "workspaces": [
     "apps/*"
   ]
