--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,25 +35,24 @@ jobs:
           node-version: 20
           cache: 'npm' # Кэширование npm зависимостей
 
-      # 3. Установка зависимостей
+      # 3. Установка зависимостей (без скачивания браузеров)
       - name: Install Dependencies
-        run: npm ci # Используем ci для быстрой и надежной установки
+        run: npm ci
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
 
-      # 4. Кэширование браузеров Playwright
+      # 4. Кэширование браузеров Playwright (Этот шаг у вас уже есть и он правильный)
       - name: Cache Playwright Browsers
-        id: cache-playwright # Добавляем id, чтобы ссылаться на output шага
+        id: cache-playwright
         uses: actions/cache@v4
         with:
-          path: ~/.cache/ms-playwright # Директория, где Playwright хранит браузеры
-          # Ключ кэша на основе ОС и хэша package-lock.json
+          path: ~/.cache/ms-playwright
           key: playwright-browsers-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
-          # Ключ для восстановления, если точного совпадения нет
           restore-keys: |
             playwright-browsers-${{ runner.os }}-
 
-      # 5. Установка зависимостей Playwright (только если кэш не найден)
+      # 5. Установка зависимостей Playwright (Этот шаг тоже правильный)
       - name: Install Playwright Browsers
-        # Запускаем установку, только если кэш не был восстановлен (cache-hit != 'true')
         if: steps.cache-playwright.outputs.cache-hit != 'true'
         run: npx playwright install --with-deps # Установка браузеров для Playwright
 
