--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@swc/cli": "0.7.8",
     "@swc/core": "1.14.0",
     "@swc/helpers": "0.5.17",
+    "@tailwindcss/postcss": "4.1.16",
     "@testing-library/dom": "10.4.1",
     "@testing-library/react": "16.3.0",
     "@types/jest": "30.0.0",
