--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "@nx/nx-darwin-x64": "22.0.2",
     "@nx/nx-linux-x64-gnu": "22.0.2",
     "@nx/nx-linux-x64-musl": "22.0.2",
-    "@nx/nx-win32-x64-msvc": "22.0.2"
+    "@nx/nx-win32-x64-msvc": "22.0.2",
+    "@rspack/binding-linux-x64-gnu": "1.5.8",
+    "@swc/core-linux-x64-gnu": "1.14.0"
   },
   "workspaces": [
     "apps/*"
