--- a/.github/actions/setup-playwright/action.yml
+++ b/.github/actions/setup-playwright/action.yml
@@ -4,6 +4,7 @@ description: 'Caches and installs Playwright browsers and system dependencies'
 runs:
   using: 'composite'
   steps:
+    # Шаг 1: По-прежнему кэшируем браузеры
     - name: Cache Playwright Browsers
       id: cache-playwright
       uses: actions/cache@v4
@@ -13,14 +14,9 @@ runs:
         restore-keys: |
           playwright-browsers-${{ runner.os }}-
 
-    # Обновляем этот шаг, добавляя libvpx9
-    - name: Install WebKit system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libwoff1 libvpx9
-      shell: bash
-
-    - name: Install Playwright Browsers
-      if: steps.cache-playwright.outputs.cache-hit != 'true'
+    # Шаг 2: Устанавливаем зависимости (и браузеры, если кэш не нашелся)
+    # Мы УБРАЛИ "if" - этот шаг должен выполняться ВСЕГДА.
+    # Он установит системные зависимости, даже если браузеры восстановлены из кэша.
+    - name: Install Playwright Dependencies (Browsers + System)
       run: npx playwright install --with-deps
       shell: bash
