--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
   ci:
     name: Continuous Integration
     runs-on: ubuntu-latest
+    needs: security
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -65,6 +66,7 @@ jobs:
         uses: ./.github/actions/run-e2e
         # with:
         #   command: 'npm run e2e'
+
   security:
     name: Security Scan
     uses: ./.github/workflows/reusable-security-scan.yml
