--- a/.github/workflows/reusable-snyk-scan.yml
+++ b/.github/workflows/reusable-snyk-scan.yml
@@ -26,26 +26,33 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/actions/install-dependencies-npm
 
+      # Этот шаг устанавливает и аутентифицирует Snyk CLI
       - name: Setup Snyk
         uses: snyk/actions/setup@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
+      # ИСПРАВЛЕНО: Используем 'run:' для вызова Snyk CLI
       - name: Run Snyk Open Source Scan
-        uses: snyk/actions/test@master
+        run: snyk test --all-projects --sarif-file-output=snyk-test.sarif
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --all-projects --sarif-file-output=snyk-test.sarif
+        continue-on-error: true # Рекомендуется, чтобы сборка не падала из-за уязвимостей
 
+      # ИСПРАВЛЕНО: Используем 'run:' для вызова Snyk CLI
       - name: Run Snyk Code Scan
-        uses: snyk/actions/code@master
+        run: snyk code test --sarif-file-output=snyk-code.sarif
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --sarif-file-output=snyk-code.sarif
+        continue-on-error: true # Рекомендуется
 
-      - name: Upload Snyk results to GitHub Security
+      # ИСПРАВЛЕНО: Загружаем оба SARIF файла по отдельности
+      - name: Upload Snyk Open Source results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: .
+          sarif_file: snyk-test.sarif
+
+      - name: Upload Snyk Code results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk-code.sarif
